[project]
name = "mobi-qc-gui"
version = "0.1.0"
description = "This project is creating a mobi GUI to visualize QC measures on multi-modal research projects."
authors = [
    {name = "Nicole Burke, Apurva Gokhe, Camilla Strauss"}
]
license = {text = "2"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
