[tool.poetry]
name = "mobi-qc-gui"
version = "0.1.0"
description = "This project is creating a mobi GUI to visualize QC measures on multi-modal research projects."
authors = [
    {name = "Nicole Burke, Apurva Gokhe, Camilla Strauss"}
]
license = "GNU Lesser General Public License v3.0"
readme = "README.md"
requires-python = ">=3.11"
packages = [{include = "mobi_qc_gui", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.3"
reportlab = "^4.4.0"
mne = "1.9.0"
certifi = "^2025.1.31"
cfgv = "^3.4.0"
chardet = "^5.2.0"
charset-normalizer = "^3.4.1"
contourpy = "^1.3.2"
coverage = "^7.8.0"
cycler = "^0.12.1"
decorator = "^5.2.1"
distlib = "^0.3.9"
filelock = "^3.18.0"
fonttools = "^4.57.0"
identify = "^2.6.10"
idna = "^3.10"
iniconfig = "^2.1.0"
jinja2 = "^3.1.6"
jsonpointer = "^3.0.0"
kiwisolver = "^1.4.8"
lazy-loader = "^0.4"
markupsafe = "^3.0.2"
matplotlib = "3.10.1"
munkres = "^1.1.4"
mypy = "^1.15.0"
mypy-extensions = "^1.1.0"
nodeenv = "^1.9.1"
numpy = "^2.2.5"
openmeeg = "^2.5.15"
packaging = "^25.0"
pdoc = "^15.0.3"
pillow = "^11.2.1"
platformdirs = "^4.3.7"
pluggy = "^1.5.0"
pooch = "^1.8.2"
pre-commit = "^4.2.0"
pygments = "^2.19.1"
pyparsing = "^3.2.3"
pyqt5 = "^5.15.11"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
ruff = "^0.11.6"
scipy = "^1.15.2"
six = "^1.17.0"
tqdm = "^4.67.1"
typing-extensions = "^4.13.2"
tzdata = "^2025.2"
urllib3 = "^2.4.0"
virtualenv = "^20.30.0"
sounddevice = "^0.5.1"
pyprep = "^0.4.3"
neurokit2 = "^0.2.10"
seaborn = "^0.13.2"
pyxdf = "^1.17.0"
librosa = "^0.11.0"
opencv-python = "^4.11.0.86"
pywavelets = "^1.8.0"
python-picard = "^0.8"
pyqt6 = "^6.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.0.0"
ruff = "^0.11.2"
ipykernel = "^6.29.5"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
